--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,11 +3,13 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --widget: #121212;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-widget: var(--widget);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -16,6 +18,7 @@
   :root {
     --background: #1e1e1e;
     --foreground: #ededed;
+    --widget: #121212;
   }
 }
 
